--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="with=device-width, initial-
     scale=1.0">
 <title>University Website Design</title>
-<link rel="stylesheet" href="sty.css">
+<link rel="stylesheet" href="style.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
 
 </head>
@@ -19,11 +19,11 @@
                 
 
                 <ul>
-                    <li><a href="in.html">HOME</a></li>
+                    <li><a href="index.html">HOME</a></li>
                     <li><a href="about.html">ABOUT</a></li>
-                    <li><a href="course.html.html">COURSE</a></li>
-                    <li><a href="blog.html.html">BLOG</a></li>
-                    <li><a href="content.html.html">CONTACT</a></li>
+                    <li><a href="course.html">COURSE</a></li>
+                    <li><a href="blog.html">BLOG</a></li>
+                    <li><a href="content.html">CONTACT</a></li>
                 </ul>
 
             </div>
