--- a/contact.html
+++ b/contact.html
@@ -39,7 +39,10 @@
 
     <section class="location">
         <iframe
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d126093.78155365585!2d7.379826948888413!3d9.024418912465427!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x104e745f4cd62fd9%3A0x53bd17b4a20ea12b!2sAbuja!5e0!3m2!1sen!2sng!4v1656346178897!5m2!1sen!2sng"
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d126093.78155365585!2d7
+            .379826948888413!3d9.024418912465427!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!
+            1s0x104e745f4cd62fd9%3A0x53bd17b4a20ea12b!2sAbuja!5e0!3m2!1sen!2sng
+            !4v1656346178897!5m2!1sen!2sng"
             width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
             referrerpolicy="no-referrer-when-downgrade"></iframe>
 
